--- a/コース2マップ.html
+++ b/コース2マップ.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>観光マップ＋仁徳天皇陵古墳</title>
+    <title>観光マップ - 堺の歴史とグルメ満喫コース</title>
     <style>
       html,
       body {
@@ -95,41 +95,42 @@
     <div class="card-container" id="cardContainer"></div>
 
     <script>
+      // 新しい「堺の歴史とグルメ満喫コース」のスポット
       const spots = [
         {
-          title: '百舌鳥古墳群ビジターセンター',
-          lat: 34.56023301912434,
-          lng: 135.48639590009105,
-          img: 'mozubizita-.jpg',
-          desc: 'にごり湯をかけ流し！'
+          title: '南宗寺',
+          lat: 34.568889,
+          lng: 135.469501,
+          img: 'images/nanshuji.jpg', // 画像はダミーです。実際のパスに修正してください。
+          desc: '枯山水庭園が美しいお寺。千利休ゆかりの茶室もあります。'
         },
         {
-          title: '堺市博物館',
-          lat: 34.55922020660278,
-          lng: 135.48431038289627,
-          img: 'hakubutukan.jpg',
-          desc: '山の中の癒しの宿'
+          title: '菜食和合 茶倉',
+          lat: 34.567762,
+          lng: 135.484299,
+          img: 'images/chakura.jpg', // 画像はダミーです。実際のパスに修正してください。
+          desc: '南宗寺の近く。体に優しい精進料理でランチはいかがですか。'
         },
         {
-          title: 'こ・ふんカフェ',
-          lat: 34.565210137996665,
-          lng: 135.4919852000911,
-          img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          title: '百舌鳥八幡宮',
+          lat: 34.554669,
+          lng: 135.494873,
+          img: 'images/mozu_hachimangu.jpg', // 画像はダミーです。実際のパスに修正してください。
+          desc: '樹齢800年の巨大なクスノキは圧巻。秋の月見祭が有名です。'
         },
         {
-          title: '仁徳天皇陵古墳',
-          lat: 34.5617130885286,
-          lng: 135.48565486006336,
-          img: 'kofun.jpg',
-          desc: '世界最大級の前方後円墳。古代日本の権威を象徴します。'
+          title: 'ジェラッテリア&カフェ リカリカ',
+          lat: 34.566394,
+          lng: 135.498004,
+          img: 'images/ricarica.jpg', // 画像はダミーです。実際のパスに修正してください。
+          desc: '散策の休憩に。素材にこだわった本格ジェラートが人気です。'
         },
         {
-          title: '大仙公園 日本庭園',
-          lat: 34.55994182649412,
-          lng: 135.48051898104532,
-          img: 'niwa.jpg',
-          desc: '歴史ある露天風呂'
+          title: 'とんかつ・洋食の店 ICHIBAN',
+          lat: 34.563079,
+          lng: 135.492282,
+          img: 'images/ichiban.jpg', // 画像はダミーです。実際のパスに修正してください。
+          desc: '地元で評判のとんかつ屋さん。ボリューム満点で大満足！'
         }
       ];
 
@@ -154,7 +155,6 @@
       `;
         container.appendChild(cardEl);
 
-        // 矢印クリック時の動作
         document.getElementById('left').addEventListener('click', () => {
           showCard(index - 1);
         });
@@ -165,7 +165,13 @@
       }
 
       function showCard(index) {
-        if (index < 0 || index >= spots.length) return;
+        // カードがループするように変更
+        if (index < 0) {
+          index = spots.length - 1;
+        } else if (index >= spots.length) {
+          index = 0;
+        }
+
         currentIndex = index;
         renderCard(currentIndex);
         const spot = spots[currentIndex];
@@ -175,8 +181,10 @@
       function initMap() {
         const center = { lat: spots[0].lat, lng: spots[0].lng };
         map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 16,
-          center: center
+          zoom: 15, // 少し広範囲が見えるように調整
+          center: center,
+          mapTypeControl: false,
+          streetViewControl: false
         });
 
         spots.forEach((spot, index) => {
@@ -195,7 +203,6 @@
       }
     </script>
 
-    <!-- Google Maps API 読み込み（ご自身のAPIキーに変更してください） -->
     <script
       async
       defer
