--- a/kankou_main.html
+++ b/kankou_main.html
@@ -94,21 +94,7 @@
         {
           title: '1/3 コース',
           name: '百舌鳥古墳群めぐり',
-          img: 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Nintoku_tomb_01.jpg/640px-Nintoku_tomb_01.jpg',
-          desc: `
-      <ul style="text-align: left; font-size: 14px;">
-        <li><strong>百舌鳥古墳群ビジターセンター</strong><br>
-        百舌鳥・古市古墳群の歴史や魅力を学べる施設。</li><br>
-        <li><strong>堺市博物館</strong><br>
-        堺の歴史文化を伝える展示が充実。</li><br>
-        <li><strong>大仙公園 日本庭園</strong><br>
-        静かで落ち着いた日本庭園。</li><br>
-        <li><strong>仁徳天皇陵古墳（大山古墳）</strong><br>
-        世界最大の前方後円墳で、仁徳天皇の墓とされる。</li><br>
-        <li><strong>こ・ふんカフェ</strong><br>
-        古墳をテーマにしたカフェで休憩もおすすめ。</li>
-      </ul>
-    `,
+          img: 'Nintoku_tomb_01.jpg',
           id: 1
         },
         {
