--- a/観光コース　決定2.html
+++ b/観光コース　決定2.html
@@ -76,7 +76,7 @@
 
       .card img {
         width: 100%;
-        max-height: 200px;
+        max-height: 450px;
         object-fit: cover;
         border-radius: 8px;
         margin-bottom: 10px;
@@ -111,7 +111,7 @@
             <div class="card-description">
               三国ヶ丘駅近くの人気洋食店。昔ながらの味を受け継ぐサクサクのとんかつや、丁寧に作られたハンバーグなど、どこか懐かしい洋食メニューが揃っています。
             </div>
-            <img src="tonkatu.jpg" alt="とんかつ・洋食の店 ICHIBAN" class="card-image" />
+            <img src="ichiban.jpg" alt="とんかつ・洋食の店 ICHIBAN" class="card-image" />
           </div>
 
           <div class="card" data-arrow-text="約22分">
