--- a/hotel5.html
+++ b/hotel5.html
@@ -122,6 +122,140 @@
           </div>
         </div>
 
+        <div class="container">
+          <h2 class="h2">スポット一覧</h2>
+          <div class="hotel-list">
+            <div class="hotel" data-lat="34.5612" data-lng="135.4780">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=ビジネスホテルニュー大浜"
+                alt="ビジネスホテルニュー大浜"
+              />
+              <div class="hotel-content">
+                <h3>ビジネスホテルニュー大浜</h3>
+                <p>南海線堺駅南出口より徒歩約8分。長期滞在にも便利なビジネスホテル。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5698" data-lng="135.4835">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=シティホテル青雲荘"
+                alt="シティホテル青雲荘"
+              />
+              <div class="hotel-content">
+                <h3>シティホテル青雲荘</h3>
+                <p>機能的なシングル・ツイン・和室を備え、ビジネスやグループに対応。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5350" data-lng="135.4700">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=臨海ホテル石津店"
+                alt="臨海ホテル石津店"
+              />
+              <div class="hotel-content">
+                <h3>臨海ホテル石津店</h3>
+                <p>南海線石津川駅から徒歩3分、心配りあるサービスとリーズナブルな料金。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5760" data-lng="135.4759">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=コンフォートホテル堺"
+                alt="コンフォートホテル堺"
+              />
+              <div class="hotel-content">
+                <h3>コンフォートホテル堺</h3>
+                <p>南海本線堺駅より徒歩3〜5分。観光やビジネス拠点に便利。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5739" data-lng="135.4852">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=ダイワロイネットホテル堺東"
+                alt="ダイワロイネットホテル堺東"
+              />
+              <div class="hotel-content">
+                <h3>ダイワロイネットホテル堺東</h3>
+                <p>南海高野線堺東駅から徒歩5分、スタイリッシュで快適なワンランク上のホテル。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5724" data-lng="135.4860">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=THE base堺東アパートメントホテル"
+                alt="THE base堺東アパートメントホテル"
+              />
+              <div class="hotel-content">
+                <h3>THE base堺東アパートメントホテル</h3>
+                <p>2018年新館オープン、最大5名まで。ミニキッチン・セパレート風呂付き。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5780" data-lng="135.4800">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=HOTEL IL GRANDIT"
+                alt="HOTEL IL GRANDIT"
+              />
+              <div class="hotel-content">
+                <h3>HOTEL IL GRANDIT</h3>
+                <p>2021年4月リニューアル。南海本線堺駅より徒歩10分。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5765" data-lng="135.4790">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=SAKAINOMA HOTEL 濱"
+                alt="SAKAINOMA HOTEL 濱"
+              />
+              <div class="hotel-content">
+                <h3>SAKAINOMA HOTEL 濱</h3>
+                <p>昭和初期の鋳物商邸宅をリノベーション、趣ある佇まい。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5766" data-lng="135.4785">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=SAKAINOMA HOTEL 熊"
+                alt="SAKAINOMA HOTEL 熊"
+              />
+              <div class="hotel-content">
+                <h3>SAKAINOMA HOTEL 熊</h3>
+                <p>路面電車沿いに佇む、併設カフェが魅力のリノベ宿。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5714" data-lng="135.4745">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=ホテルサンプラザ堺ANNEX"
+                alt="ホテルサンプラザ堺ANNEX"
+              />
+              <div class="hotel-content">
+                <h3>ホテルサンプラザ堺ANNEX</h3>
+                <p>南海本線堺駅より徒歩5分。2階に宴会場完備。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5745" data-lng="135.4870">
+              <img src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=東横イン堺東駅" alt="東横イン堺東駅" />
+              <div class="hotel-content">
+                <h3>東横イン堺東駅</h3>
+                <p>南海高野線堺東駅西出口から徒歩6分。安心のビジネス・レジャー宿。</p>
+              </div>
+            </div>
+
+            <div class="hotel" data-lat="34.5804" data-lng="135.4795">
+              <img
+                src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=くれたけイン 南海堺駅前"
+                alt="くれたけイン 南海堺駅前"
+              />
+              <div class="hotel-content">
+                <h3>くれたけイン 南海堺駅前</h3>
+                <p>南海本線堺駅南口より徒歩2分。女性にも安心の24時間フロント＆朝食バイキング。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="hotel" data-lat="34.5760" data-lng="135.4759">
           <img
             src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=コンフォートホテル堺"
