コース２マップ画像

--- a/コース2マップ.html
+++ b/コース2マップ.html
@@ -101,35 +101,35 @@
           title: '南宗寺',
           lat: 34.568889,
           lng: 135.469501,
-          img: 'images/nanshuji.jpg', // 画像はダミーです。実際のパスに修正してください。
+          img: 'nansozi.jpg',
           desc: '枯山水庭園が美しいお寺。千利休ゆかりの茶室もあります。'
         },
         {
           title: '菜食和合 茶倉',
           lat: 34.567762,
           lng: 135.484299,
-          img: 'images/chakura.jpg', // 画像はダミーです。実際のパスに修正してください。
+          img: 'chakura.jpg',
           desc: '南宗寺の近く。体に優しい精進料理でランチはいかがですか。'
         },
         {
           title: '百舌鳥八幡宮',
           lat: 34.554669,
           lng: 135.494873,
-          img: 'images/mozu_hachimangu.jpg', // 画像はダミーです。実際のパスに修正してください。
+          img: 'mozuhachimangu.jpg',
           desc: '樹齢800年の巨大なクスノキは圧巻。秋の月見祭が有名です。'
         },
         {
           title: 'ジェラッテリア&カフェ リカリカ',
           lat: 34.566394,
           lng: 135.498004,
-          img: 'images/ricarica.jpg', // 画像はダミーです。実際のパスに修正してください。
+          img: 'ricarica.jpg',
           desc: '散策の休憩に。素材にこだわった本格ジェラートが人気です。'
         },
         {
           title: 'とんかつ・洋食の店 ICHIBAN',
           lat: 34.563079,
           lng: 135.492282,
-          img: 'images/ichiban.jpg', // 画像はダミーです。実際のパスに修正してください。
+          img: 'ichiban.jpg',
           desc: '地元で評判のとんかつ屋さん。ボリューム満点で大満足！'
         }
       ];
