--- a/hotel5.html
+++ b/hotel5.html
@@ -32,6 +32,18 @@
         margin: 0 auto;
       }
 
+      @media (max-width: 900px) {
+        .hotel {
+          width: calc(50% - 20px);
+        }
+      }
+
+      @media (max-width: 600px) {
+        .hotel {
+          width: 100%;
+        }
+      }
+
       .h2 {
         color: #ff69b4;
         border-bottom: 3px dashed #ffb6c1;
