観光コース３

--- a/観光コース　決定3.html
+++ b/観光コース　決定3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>歴史巡りコース</title>
+    <title>堺の歴史と匠の技コース</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -36,7 +36,7 @@
       .card-list {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 40px; /* 矢印のスペースを確保 */
       }
 
       .card {
@@ -53,7 +53,7 @@
       .card:not(:last-child)::after {
         content: '↓';
         position: absolute;
-        bottom: -25px;
+        bottom: -35px;
         left: 50%;
         transform: translateX(-50%);
         font-size: 2em;
@@ -83,13 +83,13 @@
   </head>
   <body>
     <header>
-      <h1>歴史巡りコース</h1>
+      <h1>堺の歴史と匠の技コース</h1>
     </header>
     <div class="container">
       <section class="overview">
         <h2>コースの概要</h2>
         <p>
-          大阪は、歴史と現代文化が融合する魅力あふれる都市です。このコースでは、大阪の代表的な観光スポットとグルメエリアを効率よく巡るルートをご紹介します。
+          古くから港町として栄え、文化と産業を育んできた堺。このコースでは、その歴史的な街並みと、世界に誇る伝統産業にふれることができます。
         </p>
       </section>
 
@@ -97,45 +97,43 @@
         <h2>観光スポット一覧</h2>
         <div class="card-list">
           <div class="card">
-            <div class="card-title">1. 百舌鳥古墳群ビジターセンター</div>
+            <div class="card-title">1. さかい利晶の杜</div>
             <div class="card-description">
-              大世界遺産「百舌鳥・古市古墳群」の価値や魅力を伝えるガイダンス機能等を備えた施設です。8K空撮映像で古墳群の雄大さを体感できるシアターや古墳グッズの販売のほか、観光案内所では、レンタサイクルの貸し出しや手荷物預かりサービス等も実施しています。本施設内の各コーナーに関する概要は以下のとおりです。
+              堺が生んだ茶の湯の大成者・千利休と、情熱の歌人・与謝野晶子の生涯や作品を通して、堺の歴史と文化に触れられる施設。茶の湯体験やVRなど、体験型の展示も充実しています。
             </div>
-            <img src="mozubizita-.jpg" alt="百舌鳥古墳群ビジターセンター" class="card-image" />
+            <img src="risho_no_mori.jpg" alt="さかい利晶の杜" class="card-image" />
           </div>
 
           <div class="card">
-            <div class="card-title">2. 堺市博物館</div>
+            <div class="card-title">2. 堺伝統産業会館</div>
             <div class="card-description">
-              「ここに来れば堺の歴史と文化がわかる」博物館。古代から近代まで堺の歴史を時代ごとにゾーン展開、貴重な多くの出土品や堺のまちが培ってきた文化財などの展示を、タイムスリップするような気分で見学できます。
-              また、2021年3月に古代常設展示などをリニューアルし、百舌鳥古墳群についてより深く知ることができるようになっています。
+              堺が誇る包丁や線香、和晒（わざらし）など、数々の伝統産業の逸品が一堂に会する施設。職人の技を間近で見学できる実演や、伝統産品の購入も楽しめます。
             </div>
-            <img src="hakubutukan.jpg" alt="堺市博物館" class="card-image" />
+            <img src="sakai_densan.jpg" alt="堺伝統産業会館" class="card-image" />
           </div>
 
           <div class="card">
-            <div class="card-title">3. こ・ふんカフェ</div>
+            <div class="card-title">3. かん袋</div>
             <div class="card-description">
-              仁徳天皇陵古墳の近くにあるカフェ。古墳を感じられる可愛いスイーツがたくさん。1番人気は、濃い抹茶の上にアイスクリーム・白玉・あんこが乗った❝古墳アイス❞。
+              鎌倉時代創業という、驚くべき歴史を持つ老舗和菓子店。豊臣秀吉が名付け親とされる「くるみ餅」は、緑色の餡が特徴で、一度は味わいたい堺の名物です。
             </div>
-            <img src="kofuncafe.jpg" alt="こ・ふんカフェ" class="card-image" />
+            <img src="kanbukuro.jpg" alt="かん袋" class="card-image" />
           </div>
 
           <div class="card">
-            <div class="card-title">4. 仁徳天皇陵古墳（大山古墳・大仙陵古墳）</div>
+            <div class="card-title">4. 開口神社</div>
             <div class="card-description">
-              日本最大の前方後円墳、百舌鳥耳原三陵のひとつで、前方部を南に向けた墳丘は、全長約486m、後円部径約249m、高さ約35.8m、前方部幅約307m、高さ約33.9mの規模で、三段に築成されています。左右のくびれ部に造出しがあり、三重の濠が巡っています。陪塚と考えられる古墳は10基以上に及び、5世紀中ごろの築造と考えられます。
+              「大寺さん」の愛称で親しまれる、堺の総氏神。厄除けや安産にご利益があるとされ、地元の人々の信仰を集めています。毎年9月に行われる八朔祭（はっさくさい）では、勇壮なふとん太鼓が奉納されます。
             </div>
-            <img src="kofun.jpg" alt="仁徳天皇陵古墳" class="card-image" />
+            <img src="aguchi_jinja.jpg" alt="開口神社" class="card-image" />
           </div>
 
           <div class="card">
-            <div class="card-title">5. 大仙公園 日本庭園</div>
+            <div class="card-title">5. 旧堺燈台</div>
             <div class="card-description">
-              大仙公園内に市制100周年を記念して造られた伝統的な作庭技術を駆使した2.6haの美しい築山林泉廻遊式庭園。花木に囲まれ風情豊かなあずまや青苔亭、映波橋･印月橋、杜若池、飛流瀑など、美しい池、流水やハナショウブ･梅など四季の花で彩られます。また景色を楽しみながら、お抹茶と菓子をお楽しみいただけます（有料）。
+              明治10年に建てられた、現存する日本最古の木造洋式灯台のひとつ。かつて大阪湾を照らし続けた美しい姿は、堺のシンボルとして今も大切に保存されています。
             </div>
-            <img src="niwa.jpg" alt="大仙公園 日本庭園" class="card-image" />
-          </div>
+            <img src="sakai_lighthouse.jpg" alt="旧堺燈台" class="card-image" />
           </div>
         </div>
       </section>
