--- a/hotel3.html
+++ b/hotel3.html
@@ -6,98 +6,112 @@
     <title>ホテル一覧</title>
     <style>
       body {
-        font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
+        font-family: 'Comic Sans MS', 'Hiragino Maru Gothic Pro', 'Arial Rounded MT Bold', Meiryo, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f9f9f9;
+        background-color: #fff0f5; /* ライトピンク */
       }
+
       header {
-        background-color: #00aaff; /* 少し明るい青に変更 */
+        background-color: #ffb6c1; /* パステルピンク */
         color: #fff;
-        padding: 15px 0;
+        padding: 20px 0;
         text-align: center;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 8px rgba(255, 182, 193, 0.3);
+        border-bottom: 5px dotted #fff;
       }
+
+      header h1 {
+        font-size: 2em;
+        letter-spacing: 2px;
+      }
+
       .container {
-        padding: 20px;
-        max-width: 1200px;
+        padding: 30px;
+        max-width: 1100px;
         margin: 0 auto;
       }
-      .hotel-list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px; /* ギャップを少し広げる */
-        justify-content: center; /* 中央揃えに変更 */
-      }
-      .hotel {
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        padding: 0; /* パディングを0に */
-        width: calc(33.333% - 20px); /* 3列表示 */
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        transition: transform 0.2s, box-shadow 0.2s;
-        overflow: hidden; /* 角丸を画像に適用するため */
-      }
-      .hotel:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-      }
-      /* レスポンシブ対応 */
-      @media (max-width: 992px) {
+
+      @media (max-width: 900px) {
         .hotel {
-          width: calc(50% - 20px); /* 2列表示 */
+          width: calc(50% - 20px);
         }
       }
 
-      @media (max-width: 768px) {
+      @media (max-width: 600px) {
         .hotel {
-          width: 100%; /* 1列表示 */
+          width: 100%;
         }
       }
 
       .h2 {
-        color: #333;
-        border-bottom: 3px solid #00aaff;
+        color: #ff69b4;
+        border-bottom: 3px dashed #ffb6c1;
         padding-bottom: 10px;
         margin-bottom: 25px;
         font-size: 1.8em;
+        text-align: center;
+      }
+
+      .hotel-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 25px;
+        justify-content: center;
+      }
+
+      .hotel {
+        background-color: #fff;
+        border: 2px dashed #ffb6c1;
+        border-radius: 16px;
+        overflow: hidden;
+        width: calc(33.333% - 20px);
+        box-shadow: 0 4px 10px rgba(255, 182, 193, 0.2);
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .hotel:hover {
+        transform: scale(1.03);
+        box-shadow: 0 8px 20px rgba(255, 105, 180, 0.3);
       }
 
       .hotel img {
         width: 100%;
-        height: 200px; /* 高さを固定 */
-        object-fit: cover; /* アスペクト比を維持してトリミング */
+        height: 200px;
+        object-fit: cover;
+        border-bottom: 2px dashed #ffc0cb;
       }
+
       .hotel-content {
         padding: 15px;
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1; /* 内容が少なくても高さを揃える */
+        flex-grow: 1;
       }
 
       .hotel h3 {
-        margin: 0 0 5px 0;
+        margin: 0 0 10px 0;
         font-size: 1.2em;
-        color: #333;
+        color: #d63384;
       }
+
       .hotel p {
         margin: 0;
         font-size: 0.9em;
         color: #666;
-        flex-grow: 1;
+        line-height: 1.6;
       }
+
       .map-container {
         margin-top: 40px;
       }
+
       #map {
-        height: 500px; /* 高さを調整 */
+        height: 500px;
         width: 100%;
-        border-radius: 8px;
-        border: 1px solid #ddd;
+        border-radius: 12px;
+        border: 2px dashed #ffb6c1;
       }
     </style>
   </head>
