--- a/kankou_main.html
+++ b/kankou_main.html
@@ -33,7 +33,7 @@
         width: 80%;
         height: 60%;
         border-radius: 8px;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
       }
 
       .course-title {
@@ -96,6 +96,7 @@
           title: '1/3 コース',
           name: '百舌鳥古墳群めぐり',
           img: 'mozubizita-.jpg',
+          desc: '仁徳天皇陵古墳を中心に百舌鳥古墳群の周辺スポットを巡ります',         
           id: 1
         },
         {
@@ -104,7 +105,6 @@
           img: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Daisen_Park_Sakai.jpg/640px-Daisen_Park_Sakai.jpg',
           desc: '緑豊かな公園で、散策やピクニックに最適。',
           id: 2,
-          desc: ''
         },
         {
           title: '3/3 コース',
