--- a/hotel3.html
+++ b/hotel3.html
@@ -32,17 +32,7 @@
         margin: 0 auto;
       }
 
-      @media (max-width: 900px) {
-        .hotel {
-          width: calc(50% - 20px);
-        }
-      }
-
-      @media (max-width: 600px) {
-        .hotel {
-          width: 100%;
-        }
-      }
+      /* 2列や1列になる設定を削除しました */
 
       .h2 {
         color: #ff69b4;
@@ -65,6 +55,7 @@
         border: 2px dashed #ffb6c1;
         border-radius: 16px;
         overflow: hidden;
+        /* この設定で常に3列表示になります */
         width: calc(33.333% - 20px);
         box-shadow: 0 4px 10px rgba(255, 182, 193, 0.2);
         cursor: pointer;
