スマホ版に修正

--- a/hotel3.html
+++ b/hotel3.html
@@ -104,6 +104,13 @@
         border-radius: 12px;
         border: 2px dashed #ffb6c1;
       }
+
+      @media (max-width: 768px) {
+        .hotel {
+          /* 画面幅が768px以下の場合、幅を100%にする */
+          width: 100%;
+        }
+      }
     </style>
   </head>
   <body>
