--- a/kankou_main.html
+++ b/kankou_main.html
@@ -96,21 +96,21 @@
           title: '1/3 コース',
           name: '百舌鳥古墳群めぐり',
           img: 'mozubizita-.jpg',
-          desc: '仁徳天皇陵古墳を中心に百舌鳥古墳群の周辺スポットを巡ります',         
+          desc: '仁徳天皇陵古墳を中心に百舌鳥古墳群の周辺スポットを巡ります',
           id: 1
         },
         {
           title: '2/3 コース',
-          name: '大仙公園',
-          img: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Daisen_Park_Sakai.jpg/640px-Daisen_Park_Sakai.jpg',
-          desc: '緑豊かな公園で、散策やピクニックに最適。',
-          id: 2,
+          name: '百舌鳥から堺市街へ！歴史とグルメ満喫ウォーキング',
+          img: 'mozuhachimangu.jpg',
+          desc: '世界遺産のある百舌鳥エリアから堺の中心部へ、点在する歴史名所と話題のグルメを味わいながら歩く、魅力満載のコースです。',
+          id: 2
         },
         {
           title: '3/3 コース',
-          name: '歴史巡り',
-          img: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Daisen_Park_Sakai.jpg/640px-Daisen_Park_Sakai.jpg',
-          desc: '緑豊かな公園で、散策やピクニックに最適。',
+          name: '堺の心に触れる。伝統と歴史の探訪ウォーク',
+          img: 'risho_no_mori.jpg',
+          desc: '堺に古くから受け継がれる歴史や職人たちの伝統をじっくりと巡り、その奥深い精神や文化に触れることを目的とした、味わい深いウォーキングコースです。',
           id: 3
         }
       ];
