アゴーラリージェンシー

--- a/hotel3.html
+++ b/hotel3.html
@@ -121,14 +121,16 @@
     <div class="container">
       <h2 class="h2">スポット一覧</h2>
       <div class="hotel-list">
-        <div class="hotel" data-lat="34.5804" data-lng="135.4795">
+        <div class="hotel" data-lat="34.58275515228795" data-lng="135.467605553982">
           <img
-            src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=くれたけイン南海堺駅前"
-            alt="くれたけイン南海堺駅前"
+            src="https://prtimes.jp/i/10241/340/ogp/d10241-340-539319-0.jpg"
+            alt="ホテル　アゴーラ　リージェンシー大阪堺"
           />
           <div class="hotel-content">
-            <h3>くれたけイン南海堺駅前</h3>
-            <p>南海本線 堺駅西口より徒歩2分。ウェルカムドリンクや男女別浴場が嬉しいビジネスホテル。</p>
+            <h3>ホテル　アゴーラ　リージェンシー大阪堺</h3>
+            <p>
+              南海本線堺駅西口直結でアクセス抜群。大阪ミナミの中心地の難波より電車で約10分と大阪市内からも近く、関西空港からも電車で約37分と国内外を問わず遠方からのゲストのお迎えも容易です。また近隣には高速道路の出入口もありお車でのお越しもスムーズ。USJや、フェニーチェ堺（堺市民芸術文化ホール）、J－GREEN堺（堺市立サッカー・ナショナルトレーニングセンター）、長居陸上競技場（ヤンマースタジアム長居）などへのアクセスにも便利です。
+            </p>
           </div>
         </div>
 
