ホテル写真

--- a/hotel3.html
+++ b/hotel3.html
@@ -134,36 +134,47 @@
           </div>
         </div>
 
-        <div class="hotel" data-lat="34.5760" data-lng="135.4759">
+        <div class="hotel" data-lat="34.53778098816464" data-lng="135.45529835212986">
           <img
-            src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=コンフォートホテル堺"
-            alt="コンフォートホテル堺"
+            src="https://jl-db.nfaj.go.jp/assets/images/202106/l/2f6157fe5e58f7465bf462586a70d48d.jpg"
+            alt="SAKAINOMA HOTEL　濵　旧福井邸"
           />
           <div class="hotel-content">
-            <h3>コンフォートホテル堺</h3>
-            <p>南海本線堺駅より徒歩約5分の便利な立地。観光やビジネスの拠点としてご利用いただけます。</p>
+            <h3>SAKAINOMA HOTEL　濵　旧福井邸</h3>
+            <p>
+              昭和初期に建てられた大阪鋳物商の遊び心ある別邸。
+              昭和初期に建てられた鋳物商人の邸宅。今では珍しい書院、障子、襖、縁側など、当時の趣が残っています。700平米を超える敷地に、広々としたお庭や広間、鋳物風呂があり、裕福な商人の暮らしを体験できる一棟貸し宿泊施設です。
+              意匠や空間にこだわった本物の建物と、その時代とその建物を大切にしたここでしかできないことをお楽しみください。
+            </p>
           </div>
         </div>
 
-        <div class="hotel" data-lat="34.5739" data-lng="135.4852">
+        <div class="hotel" data-lat="34.57720153206088" data-lng="135.48145128835782">
           <img
-            src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=ダイワロイネットホテル堺東"
-            alt="ダイワロイネットホテル堺東"
+            src="https://tse3.mm.bing.net/th/id/OIP.U-RRIvIxKRIePrbM3npWKwAAAA?rs=1&pid=ImgDetMain&o=7&rm=3"
+            alt="THE　base堺東アパートメントホテル"
           />
           <div class="hotel-content">
-            <h3>ダイワロイネットホテル堺東</h3>
-            <p>堺東を代表するワンランク上のビジネスホテル。南海高野線堺東駅より徒歩5分。</p>
+            <h3>THE　base堺東アパートメントホテル</h3>
+            <p>
+              ２０１８年８月に新館がオープン、最大５名様まで宿泊可能な畳のある広々和洋室が、全５４室となりました。
+              新築マンションをホテルへコンバージョンし、ミニキッチンやセパレートタイプの風呂・トイレを完備。
+              大阪市内やベイエリアへのアクセスもよく、ビジネスでの長期利用や、グループ、ファミリーのご利用にも最適です。
+            </p>
           </div>
         </div>
 
-        <div class="hotel" data-lat="34.5714" data-lng="135.4745">
+        <div class="hotel" data-lat="34.57910263548722" data-lng=" 135.46794909725267">
           <img
-            src="https://placehold.jp/30/cccccc/ffffff/400x250.png?text=ホテルサンプラザ堺 ANNEX"
+            src="https://th.bing.com/th/id/OIP.K2_isA9XWLwdRwKzR6U4jAHaEK?w=282&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
             alt="ホテルサンプラザ堺 ANNEX"
           />
           <div class="hotel-content">
             <h3>ホテルサンプラザ堺ANNEX</h3>
-            <p>ワンランク上のビジネスホテル。阪堺線「宿院」駅から徒歩5分の好立地です。</p>
+            <p>
+              ワンランク上のビジネスホテル。
+              ホテルサンプラザ堺ANNEXは南海本線堺駅から徒歩5分の好立地。臨海工業地帯や、周辺の観光スポットへのアクセスも快適なビジネスホテルです。2階にあります宴会場「ラディウスホール」は、立食パーティーであれば最大100名様までご利用が可能です。
+            </p>
           </div>
         </div>
 
