--- a/kankou_main.html
+++ b/kankou_main.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>観光スポット紹介</title>
+    <title>観光コース紹介</title>
     <style>
       body {
         margin: 0;
@@ -94,9 +94,9 @@
       const course = [
         {
           title: '1/3 コース',
-          name: '百舌鳥古墳群めぐり',
+          name: '古墳を歩こう！百舌鳥古墳群探訪コース',
           img: 'mozubizita-.jpg',
-          desc: '仁徳天皇陵古墳を中心に百舌鳥古墳群の周辺スポットを巡ります',
+          desc: '仁徳天皇陵古墳を中心に、百舌鳥古墳群に点在する見どころを歩いて楽しむ、歴史と自然に癒されるコースです。',
           id: 1
         },
         {
