--- a/コース1マップ.html
+++ b/コース1マップ.html
@@ -97,35 +97,35 @@
     <script>
       const spots = [
         {
-          title: '百舌鳥古墳群ビジターセンター',
+          title: '1. 百舌鳥古墳群ビジターセンター',
           lat: 34.56023301912434,
           lng: 135.48639590009105,
           img: 'mozubizita-.jpg',
           desc: '観光案内所・シアタールーム・グッズ販売などを備えた施設です。'
         },
         {
-          title: '堺市博物館',
+          title: '2. 堺市博物館',
           lat: 34.55922020660278,
           lng: 135.48431038289627,
           img: 'hakubutukan.jpg',
           desc: '堺の歴史と文化がわかる博物館。古代から近代までの展示があります。'
         },
         {
-          title: 'こ・ふんカフェ',
+          title: '3. こ・ふんカフェ',
           lat: 34.565210137996665,
           lng: 135.4919852000911,
           img: 'kofuncafe.jpg',
           desc: '古墳をテーマにしたカフェ。古墳グッズも販売しています。'
         },
         {
-          title: '仁徳天皇陵古墳',
+          title: '4. 仁徳天皇陵古墳',
           lat: 34.5617130885286,
           lng: 135.48565486006336,
           img: 'kofun.jpg',
           desc: '世界最大級の前方後円墳。古代日本の権威を象徴します。'
         },
         {
-          title: '大仙公園 日本庭園',
+          title: '5. 大仙公園 日本庭園',
           lat: 34.55994182649412,
           lng: 135.48051898104532,
           img: 'niwa.jpg',
