--- a/kankou_main.html
+++ b/kankou_main.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>観光コース紹介</title>
     <style>
       body {
@@ -14,7 +15,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 90%;
         position: relative;
       }
 
@@ -31,7 +32,7 @@
 
       .card img.main-image {
         width: 80%;
-        height: 60%;
+        height: 80%;
         border-radius: 8px;
         margin-bottom: 5px;
       }
@@ -39,14 +40,14 @@
       .course-title {
         background-color: #4ebadb;
         color: white;
-        font-size: 18px;
+        font-size: 25px;
         padding: 6px;
         border-radius: 4px;
         margin-bottom: 10px;
       }
 
       .description {
-        font-size: 14px;
+        font-size: 20px;
         margin-bottom: 12px;
         color: #333;
       }
@@ -64,7 +65,7 @@
         color: white;
         border: none;
         border-radius: 6px;
-        font-size: 14px;
+        font-size: 20px;
         cursor: pointer;
       }
 
