サイズ調節１

--- a/kankou_main.html
+++ b/kankou_main.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>観光コース紹介</title>
     <style>
       body {
@@ -47,7 +47,7 @@
       }
 
       .description {
-        font-size: 20px;
+        font-size: 15px;
         margin-bottom: 12px;
         color: #333;
       }
