--- a/kankou_main.html
+++ b/kankou_main.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>観光コース紹介</title>
     <style>
       body {
@@ -15,7 +15,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 90%;
         position: relative;
       }
 
