サイズ調節２

--- a/kankou_main.html
+++ b/kankou_main.html
@@ -16,12 +16,12 @@
         justify-content: center;
         align-items: center;
         position: relative;
+        padding: 10px;
       }
 
       .card {
         position: relative;
         width: 90%;
-        height: 90%;
         background: white;
         border-radius: 16px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -31,9 +31,9 @@
 
       .card img.main-image {
         width: 80%;
-        height: 80%;
+        height: auto;
         border-radius: 8px;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
       }
 
       .course-title {
@@ -53,18 +53,18 @@
 
       .detail-buttons {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         gap: 10px;
+        margin-top: 10px;
       }
 
       .detail-buttons button {
-        flex: 1;
-        padding: 10px;
+        padding: 12px;
         background-color: #5c78d6;
         color: white;
         border: none;
         border-radius: 6px;
-        font-size: 20px;
+        font-size: 18px;
         cursor: pointer;
       }
 
@@ -85,6 +85,33 @@
       .nav-button.right {
         right: 10px;
       }
+
+      @media screen and (max-width: 600px) {
+        .card {
+          width: 95%;
+          padding: 15px;
+        }
+
+        .course-title {
+          font-size: 20px;
+          padding: 4px;
+        }
+
+        .description {
+          font-size: 14px;
+        }
+
+        .detail-buttons button {
+          font-size: 16px;
+          padding: 10px;
+        }
+
+        .nav-button {
+          width: 40px;
+          height: 40px;
+        }
+      }
+
     </style>
   </head>
   <body>
