サイズ調節３

--- a/kankou_main.html
+++ b/kankou_main.html
@@ -12,11 +12,13 @@
       }
 
       .card-container {
+        min-height: 100vh; 
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
         padding: 10px;
+        box-sizing: border-box;
       }
 
       .card {
