--- a/kankou_main.html
+++ b/kankou_main.html
@@ -123,21 +123,21 @@
       const course = [
         {
           title: '1/3 コース',
-          name: '古墳を歩こう！百舌鳥古墳群探訪コース',
+          name: '古墳を歩こう！<br>百舌鳥古墳群探訪コース',
           img: 'mozubizita-.jpg',
           desc: '仁徳天皇陵古墳を中心に、百舌鳥古墳群に点在する見どころを歩いて楽しむ、歴史と自然に癒されるコースです。',
           id: 1
         },
         {
           title: '2/3 コース',
-          name: '百舌鳥から堺市街へ！歴史とグルメ満喫ウォーキング',
+          name: '百舌鳥から堺市街へ！<br>歴史とグルメ満喫ウォーキング',
           img: 'mozuhachimangu.jpg',
           desc: '世界遺産のある百舌鳥エリアから堺の中心部へ、点在する歴史名所と話題のグルメを味わいながら歩く、魅力満載のコースです。',
           id: 2
         },
         {
           title: '3/3 コース',
-          name: '堺の心に触れる。伝統と歴史の探訪ウォーク',
+          name: '堺の心に触れる。<br>伝統と歴史の探訪ウォーク',
           img: 'risho_no_mori.jpg',
           desc: '堺に古くから受け継がれる歴史や職人たちの伝統をじっくりと巡り、その奥深い精神や文化に触れることを目的とした、味わい深いウォーキングコースです。',
           id: 3
