--- a/kankou_main.html
+++ b/kankou_main.html
@@ -159,7 +159,7 @@
               <p class="description">${spot.desc}</p>
               <div class="detail-buttons">
                 <button onclick="window.location.href='観光コース　決定${spot.id}.html';">コース詳細</button>
-                <button onclick="window.location.href='コース${spot.id}マップ.html';">マップ</button>
+                <button onclick="window.location.href='course${spot.id}map.html';">マップ</button>
               </div>
               <img id="right" class="nav-button right" src="right_botton.jpeg" alt="→">
             `;
