--- a/course3map.html
+++ b/course3map.html
@@ -20,18 +20,18 @@
         bottom: 0;
         left: 0;
         right: 0;
-        padding: 10px;
+        padding: 40px 40px 0;
         display: flex;
         overflow-x: auto;
         background: rgba(255, 255, 255, 0.9);
         z-index: 5;
         justify-content: center;
+        height: 700px;
       }
 
       .card {
         position: relative;
         flex: 0 0 80%;
-        max-width: 500px;
         background: white;
         border-radius: 16px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -39,7 +39,7 @@
         justify-content: center;
         align-items: center;
         padding: 20px 60px;
-        height: 250px;
+        height: 630px;
       }
 
       .card-content {
@@ -47,51 +47,28 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        overflow: hidden;
       }
 
       .card-content img {
-        width: 100px;
-        height: 80px;
-        object-fit: cover;
+        width: auto;
+        height: 450px;
         border-radius: 8px;
-        margin-bottom: 10px;
+        margin: 10px 0;
       }
 
-      .card-content h2 {
-        font-size: 1.2em;
-        margin: 5px 0;
-      }
-
+      .card-content h2,
       .card-content p {
-        font-size: 0.9em;
-        margin: 5px 0;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
+        margin: 20px 0;
       }
 
       .nav-button {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        width: 40px;
-        height: 40px;
+        width: 70px;
+        height: 70px;
         cursor: pointer;
         z-index: 10;
-        background-color: rgba(255, 255, 255, 0.7);
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
-        font-size: 24px;
-        user-select: none;
-      }
-
-      .nav-button:hover {
-        background-color: rgba(255, 255, 255, 1);
       }
 
       .nav-button.left {
@@ -100,6 +77,17 @@
 
       .nav-button.right {
         right: 10px;
+      }
+
+      #instruction {
+        position: absolute;
+        bottom: 200px;
+        width: 100%;
+        text-align: center;
+        font-weight: bold;
+        font-size: 16px;
+        color: #333;
+        z-index: 10;
       }
     </style>
   </head>
@@ -158,14 +146,14 @@
         const cardEl = document.createElement('div');
         cardEl.className = 'card';
         cardEl.innerHTML = `
-        <div id="left" class="nav-button left">‹</div>
-        <div class="card-content">
-          <h2>${spot.title}</h2>
-          <img src="${spot.img}" alt="${spot.title}">
-          <p>${spot.desc}</p>
-        </div>
-        <div id="right" class="nav-button right">›</div>
-      `;
+              <div id="left" class="nav-button left">‹</div>
+              <div class="card-content">
+                <h2>${spot.title}</h2>
+                <img src="${spot.img}" alt="${spot.title}">
+                <p>${spot.desc}</p>
+              </div>
+              <div id="right" class="nav-button right">›</div>
+            `;
         container.appendChild(cardEl);
 
         document.getElementById('left').addEventListener('click', () => {
@@ -210,6 +198,29 @@
           });
           markers.push(marker);
         });
+        let touchStartX = 0;
+        let touchEndX = 0;
+
+        container.addEventListener('touchstart', (e) => {
+          touchStartX = e.changedTouches[0].screenX;
+        });
+
+        container.addEventListener('touchend', (e) => {
+          touchEndX = e.changedTouches[0].screenX;
+          handleSwipeGesture();
+        });
+
+        function handleSwipeGesture() {
+          const swipeThreshold = 50; // 最低スワイプ距離（px）
+
+          if (touchEndX < touchStartX - swipeThreshold) {
+            // 左にスワイプ → 次のカード
+            showCard(currentIndex + 1);
+          } else if (touchEndX > touchStartX + swipeThreshold) {
+            // 右にスワイプ → 前のカード
+            showCard(currentIndex - 1);
+          }
+        }
 
         showCard(currentIndex);
       }
