--- a/course1map.html
+++ b/course1map.html
@@ -166,7 +166,13 @@
       }
 
       function showCard(index) {
-        if (index < 0 || index >= spots.length) return;
+        // カードがループするように変更
+        if (index < 0) {
+          index = spots.length - 1;
+        } else if (index >= spots.length) {
+          index = 0;
+        }
+
         currentIndex = index;
         renderCard(currentIndex);
         const spot = spots[currentIndex];
@@ -177,7 +183,9 @@
         const center = { lat: spots[0].lat, lng: spots[0].lng };
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 16,
-          center: center
+          center: center,
+          mapTypeControl: false,
+          streetViewControl: false
         });
 
         spots.forEach((spot, index) => {
